# cpp_fir_lpf

./: .gitmodules  README.md
cpp/: run_build.sh
cpp/src/: .gitignore  CMakeLists.txt
cpp/src/csv/: CMakeLists.txt  CsvRow.cpp
cpp/src/fir/: CMakeLists.txt  FirFilter.cpp  FirFilter.hpp
cpp/src/tb/: CMakeLists.txt  csv_test.cpp  fir_filter_testbench.cpp
matlab/: .gitignore  filter_coeffs.csv  fir_filter_design.m  input_data.csv  nonuniform_quantizer_codebook.csv  nonuniform_quantizer_eight_bit_codebook.csv  nonuniform_quantizer_partition.csv  quantizer_design.m
